--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -18,13 +18,59 @@
 #contact-main
 {
     width: 100%;
-    height: fit-content;
+    height: 350px;
     color: white;
     
     background-color: rgb(22, 20, 20);
 }
+#contact-main h1
+{
+    font-size: large;
+}
+#contact-main p
+{
+    font-size: medium;
+}
 #contact-main-form
 {
     width: 100%;
-    height: auto;
+    height: 350px;
+}
+#form-row div
+{
+    margin: auto;
+}
+#form-row div label
+{
+    margin: auto;
+}
+#form-row div input
+{
+    margin: auto;
+}
+/* section3 css here */
+#section-row-three
+{
+    width: 100%;
+    height: 400px;
+    margin: auto;
+}
+#section-row-three span
+{
+    background-color: aliceblue;
+}
+#section-row-three ul
+{
+    display: flex;
+}
+#section-row-three ul li{
+    text-align: center;
+}
+#section-row-three ul li a
+{
+    text-decoration: none;
+}
+#section-row-three ul li a i
+{
+    width: 50px;
 }
