--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -4,12 +4,33 @@
     padding: 0;
 }
 /* section1 css here */
+#section1
+{
+    width: 75%;
+    margin: auto;
+}
+#text-row
+{
+    display: flex ;
+    height: 380px;
+}
 #Text
 {
  width: 100%;
- padding: 70px 0;
-  text-align: center;
+
 }
+#Text h1
+{
+    font-family: GT,serif !important;
+    letter-spacing: 0;
+    line-height: 49px;
+    font-weight: 200 !important;
+     font-size: 74px;
+}
+#Text p{
+    margin: 0px 0px 0px 20px;
+}
+
 .Image1 img
 {
     width: 100%;
@@ -17,16 +38,25 @@
 /* section2 css here */
 #section2
 {
-    width: 80%;
+    width: 90%;
     margin: auto;
+    margin-top: 30px;
 }
 #contact-main
 {
     width: 100%;
     height: 350px;
     color: white;
-    
+    border-radius: 10px 0px 0px 10px;
     background-color: rgb(22, 20, 20);
+}
+#section2-col1
+{
+margin-right: -12px;
+}
+#section2-row
+{
+    border-radius: 20px;
 }
 #contact-main h1
 {
@@ -39,7 +69,8 @@
 #form
 {
     height: 350px;
-    background-color: #7a7a7a;
+    border-radius: 0px 10px 10px 0px;
+    background-color: #f5f5f5;
 }
 #form-row
 {
