--- a/src/Component/Portfolio/Portfolio.css
+++ b/src/Component/Portfolio/Portfolio.css
@@ -1,30 +1,27 @@
-*
-{
+* {
     margin: 0 auto;
     padding: 0;
 }
 
-.gallary  div img{
+.gallary div img {
     width: 100%;
-    
-    
 }
-.gallary
-{
+
+.gallary {
     justify-content: center;
 }
-.gallary-col
-{
+
+.gallary-col {
     margin-top: 30px;
-    color: black ;
+    color: black;
     margin: 5px;
     cursor: pointer;
-
 }
-.gallary h1{
+
+.gallary h1 {
     text-align: center;
 }
-.section-1
-{
+
+.section-1 {
     text-align: center;
 }
