--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -1,19 +1,20 @@
-*
-{
+* {
     margin: 0 auto;
     padding: 0;
 }
-.col-md-6 img{
+
+.col-md-6 img {
+    margin: 10px auto;
     width: 300px;
     height: 350px;
     min-width: 200px;
     min-height: 150px;
-
 }
-.section-1{
+
+.section-1 {
     text-align: center;
 }
-.section-4
-{
+
+.section-4 {
     text-align: center;
 }
