--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -9,28 +9,34 @@
 
 .about img {
     margin-top: 100px;
+    margin-bottom: 20px;
+
+}
+.section1-col-1{
+    margin-bottom: 25px;
 }
 
 .section1 {
     background-color: rgb(189, 183, 183);
-    margin-top: 50px;
-    height: 600px;
+    margin-top: 20px;
+    
 }
 
 .section2 p {
     margin: auto;
-    margin-top: 20px;
+
     width: 70%;
     text-align: center;
 }
 
 .section2 h1 {
-    margin-top: 170px;
+    margin-top: 100px;
     text-align: center;
 }
 
 .section-3 {
-    height: 300px;
+    height: auto;
+    text-align: center;
     background-color: #c2b04a;
 }
 
@@ -49,6 +55,18 @@
     height: 100%;
     background-color: #c9d9d5;
     transform: translateY(0%);
+}
+.section-3-p
+{
+    text-align: center;
+}
+.section-3-p h1
+{
+    font-size: large;
+
+}
+.section-3-p h6{
+    font-weight: 700;
 }
 
 .section-3 ul span {
@@ -88,17 +106,6 @@
     line-height: 1.3;
     font-weight: 700;
     position: relative;
-    padding-left: 86px;
     margin-bottom: 61px;
 }
 
-.h1::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    background-color: #070c1f;
-    width: 56px;
-    height: 2px;
-    transform: translateY(-50%);
-}
