--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -23,7 +23,7 @@
 {
     font-family: GT,serif !important;
     letter-spacing: 0;
-    line-height: 49px;
+    line-height: 100px;
     font-weight: 200 !important;
      font-size: 74px;
 }
@@ -45,7 +45,7 @@
 #contact-main
 {
     width: 100%;
-    height: 350px;
+    height: auto;
     color: white;
     border-radius: 10px 0px 0px 10px;
     background-color: rgb(22, 20, 20);
@@ -68,19 +68,19 @@ margin-right: -12px;
 }
 #form
 {
-    height: 350px;
+    height: auto;
     border-radius: 0px 10px 10px 0px;
     background-color: #f5f5f5;
 }
 #form-row
 {
     width: 100%;
-    height: 50%;
+    height: 100%;
 }
 #contact-main-form
 {
     width: 100%;
-    height: 350px;
+    height: 100%;
     margin: 50px;
 }
 #form-row div
