--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -13,6 +13,16 @@
 
 .section-1 {
     text-align: center;
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+
+}
+.section-1 h1
+{
+    width: 100%;
+    margin-left: 25px;
+    margin-right: 250px;
 }
 
 .section-4 {
